refactor: refatorando alteração a ser feita, especificando a remoção do relacionamento entre JN e Jornalismo sem remover os objteos, além de ajustes na lógica da alteração desejada